--- a/main.html
+++ b/main.html
@@ -10,6 +10,12 @@
 
 <body>
 	<table id="sampleTable" border="1"> 
+		<tr>
+				New Cell1
+		</tr>
+		<tr>
+				New Cell2
+		</tr>
 		<tr><td>Row1 cell1</td> 
 		<td>Row1 cell2</td></tr> 
 		<tr><td>Row2 cell1</td> 
